--- a/src/components/NewsletterForm.astro
+++ b/src/components/NewsletterForm.astro
@@ -31,17 +31,12 @@ const {
   </p>
 
   <form 
-    name="newsletter"
-    method="POST"
-    data-netlify="true"
-    data-netlify-honeypot="bot-field"
-    class="flex flex-col sm:flex-row gap-3"
     id="newsletter-form"
+    class="flex flex-col sm:flex-row gap-3"
   >
-    <!-- Netlify form fields -->
-    <input type="hidden" name="form-name" value="newsletter" />
-    <input type="hidden" name="bot-field" />
-    <input type="hidden" name="locale" value={locale} />
+    <!-- Hidden fields -->
+    <input type="hidden" name="form-type" value="newsletter" />
+    <input type="hidden" name="language" value={locale} />
     
     <div class="flex-1">
       <input
